# funny-cpp

./: .gitignore  .gitmodules  CMakeLists.txt
client/: client.cpp  client_server.cpp  server.cpp
src/: CMakeLists.txt  api.hpp  gui.hpp  main.cpp  main.hpp  main2.cpp
src/gui/: gui.py
tests/: CMakeLists.txt
